<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WeatherApp</string>
    <string name="action_search">Search</string>
    <string name="action_location_found">Location</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Check updates</string>
    <string name="GPS_search">Find city by GPS</string>
    <string name="search_hint">Type city name</string>
    <string name="about">About</string>
    <string name="location_found">Location found</string>
</resources>
