<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Search Widget -->
    <item android:id="@+id/action_search"
          android:icon="@drawable/ic_action_search"
          android:title="@string/action_search"
          android:showAsAction="always"
          android:queryHint="@string/search_hint"
          android:actionViewClass="android.widget.SearchView"/>

    <!-- Location Found -->
    <item android:id="@+id/action_location_found"
          android:icon="@drawable/ic_action_location_found"
          android:title="@string/action_location_found"
          android:showAsAction="ifRoom" />

    <!-- Refresh -->
    <item android:id="@+id/action_refresh"
          android:title="@string/action_refresh"
          android:showAsAction="ifRoom" />

    <!-- Help -->
    <item android:id="@+id/action_help"
          android:title="@string/action_help"
          android:showAsAction="never"/>

</menu>